Fix overflow for inner fields

--- a/src/resources/src/scss/_input.scss
+++ b/src/resources/src/scss/_input.scss
@@ -9,7 +9,7 @@
 .superTable-table {
     border-radius: 5px;
     border: 1px solid darken(#e3e5e8, 5%);
-    overflow: hidden;
+    // overflow: hidden;
     width: 100%;
     margin-top: 10px;
     box-shadow: 0 1px 5px -1px rgba(0, 0, 0, 0.1);
